<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java Floor Plan Reconstruction</string>
    <string name="app_name_long">Java Floor Plan Reconstruction Example</string>
    <string name="exception_tango_error">"Tango exception! Try again!"</string>
    <string name="exception_tango_invalid">"Tango invalid exception! Try again!"</string>
    <string name="exception_out_of_date">"Tango service outdated!"</string>
    <string name="exception_tango_permission">"Tango.PERMISSIONTYPE_DATASET required!"</string>
    <string name="pause">Pause</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    <string name="waypoint">Add a Waypoint</string>
    <string name="export">Export map</string>
    <string name="file_name">Export.bmp</string>
</resources>
