<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.projecttango.examples.java.floorplanreconstruction.FloorplanView
        android:id="@+id/floorplan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/area_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Area (m2): "
        android:layout_alignLeft="@+id/pause_button"
        android:layout_above="@+id/pause_button"
        />


    <TextView
        android:id="@+id/area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n/a"
        android:layout_above="@+id/pause_button"
        android:layout_toEndOf="@+id/area_label"
        android:paddingRight="5dp"
        />

    <Button
        android:id="@+id/clear_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/clear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:onClick="onClearButtonClicked" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/pause"
        android:layout_above="@+id/clear_button"
        android:layout_alignParentEnd="true"
        android:onClick="onPauseButtonClicked"/>

    <Button
        android:id="@+id/export_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/export"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onExportClicked"/>

    <Button
        android:id="@+id/add_waypoint_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/waypoint"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onWaypointClicked"/>

    <Button
        android:id="@+id/undo_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/undo"
        android:layout_above="@+id/add_waypoint_button"
        android:layout_alignParentStart="true"
        android:onClick="onUndoClicked"/>

</RelativeLayout>
